[metadata]
name = mock
author = mock
author-email = mock
version = 0.0.1
summary = a simple mock service
description-file = README.md
license = Apache-2
classifier = 
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
keywords = 
	setup
	distutils

[files]
packages = 
	mock
data_files = 
	etc/ = etc/*

[entry_points]
console_scripts = 
	mock-server = mock.commands.server:run
pbr.config.drivers = 
  plain = pbr.cfg.driver:Plain
